WIP resume restyling

--- a/less/_resume_print.less
+++ b/less/_resume_print.less
@@ -3,6 +3,7 @@
 html {
   margin: 0px;
   padding: 0px;
+  font-size: 13px;
 }
 
 body {
@@ -13,7 +14,7 @@ body {
 }
 
 #content {
-  margin: 0px;
+  margin: 0px auto;
   background: #fff;
   width: 900px;
 
