--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -38,16 +38,16 @@
       <div>
         <h3>Education</h3>
         <div class="education">
-          <div class="dates">
-            Aug. 2005 – May 2009
-          </div>
-
           <div class="school">
             Case Western Reserve University
           </div>
 
           <div class="city">
             Cleveland, OH
+          </div>
+
+          <div class="span">
+            Aug. 2005 – May 2009
           </div>
 
           <div class="degree">
@@ -60,10 +60,6 @@
       <div>
         <h3>Experience</h3>
         <div class="experience">
-          <div class="dates">
-            Sept. 2017 – present
-          </div>
-
           <div class="company">
             Red Ventures
           </div>
@@ -72,8 +68,24 @@
             Fort Mill, SC
           </div>
 
+          <div class="span">
+            Sept. 2017 – present
+          </div>
+
           <div class="title">
-            Senior Software Engineer/Principal Software Engineer
+            Principal Software Engineer
+          </div>
+
+          <div class="title-date">
+            Feb. 2020 – present
+          </div>
+
+          <div class="title">
+            Senior Software Engineer
+          </div>
+
+          <div class="title-date">
+            Sept. 2017 – Feb. 2020
           </div>
 
           <ul class="extra">
@@ -90,20 +102,32 @@
         </div>
 
         <div class="experience">
-          <div class="dates">
-            June 2009 – Sept. 2017
-          </div>
-
           <div class="company">
-            LoudDoor LLC, Storylift LLC
+            LoudDoor LLC (Storylift LLC)
           </div>
 
           <div class="city">
             Columbia, SC
           </div>
 
+          <div class="span">
+            June 2009 – Sept. 2017
+          </div>
+
           <div class="title">
-            Software Engineer/Senior Software Engineer
+            Senior Software Engineer
+          </div>
+
+          <div class="title-date">
+            Jan. 2015 – Sept. 2017
+          </div>
+
+          <div class="title">
+            Software Engineer
+          </div>
+
+          <div class="title-date">
+            June 2009 – Jan. 2015
           </div>
 
           <ul class="extra">
@@ -122,10 +146,6 @@
         </div>
 
         <div class="experience">
-          <div class="dates">
-            June 2007 – May 2009
-          </div>
-
           <div class="company">
             Lazorpoint, LLC
           </div>
@@ -134,8 +154,15 @@
             Cleveland, OH
           </div>
 
-          <div class="title">
-            Application Developer - Intern<br />
+          <div class="span">
+            June 2007 – May 2009
+          </div>
+
+          <div class="title full">
+            Application Developer - Intern
+          </div>
+
+          <div class="title full">
             Client Services Engineer - Intern
           </div>
 
@@ -147,16 +174,16 @@
         </div>
 
         <div class="experience">
-          <div class="dates">
-            May 2006 – July 2006
-          </div>
-
           <div class="company">
             City of Mentor
           </div>
 
           <div class="city">
             Mentor, OH
+          </div>
+
+          <div class="span">
+            May 2006 – July 2006
           </div>
 
           <div class="title">
@@ -169,16 +196,16 @@
         </div>
 
         <div class="experience">
-          <div class="dates">
-            Nov. 2003 – Aug. 2005
-          </div>
-
           <div class="company">
-            Perry Local Schools IS Department
+            Perry Local Schools
           </div>
 
           <div class="city">
             Perry, OH
+          </div>
+
+          <div class="span">
+            Nov. 2003 – Aug. 2005
           </div>
 
           <div class="title">
@@ -194,46 +221,33 @@
 
       <div class="block">
         <h3>Skills</h3>
-        <div class="normal_list">
-          <ul>
-            <li><b>Programming languages:</b> Extensive experience with Go, PHP (standard and MVC paradigms, Laravel framework), Javascript (ES6, Vue, jQuery, some React; some experience with C#, shell scripting</li>
-            <li><b>Infrastructure:</b> Extensive experience with Amazon AWS (EC2, ECS, S3, Lambda, some API Gateway, some Cloudfront, some Kinesis), Terraform</li>
-            <li><b>Databases:</b> Extensive experience with MySQL and SQL Server development/optimization, Redis; some experience with MongoDB, DynamoDB, MySQL administration</li>
-            <li><b>Other technology:</b> Extensive experience with Git; experience with Kubernetes, Cloudflare, Subversion, Mercurial, and CVS version control, Memcache, Redis</li>
-          </ul>
-        </div>
+        <ul class="normal-list">
+          <li><b>Programming languages:</b> Extensive experience with Go, PHP (standard and MVC paradigms, Laravel framework), Javascript (ES6, Vue, jQuery, some React; some experience with C#, shell scripting</li>
+          <li><b>Infrastructure:</b> Extensive experience with Amazon AWS (EC2, ECS, S3, Lambda, some API Gateway, some Cloudfront, some Kinesis), Terraform</li>
+          <li><b>Databases:</b> Extensive experience with MySQL and SQL Server development/optimization, Redis; some experience with MongoDB, DynamoDB, MySQL administration</li>
+          <li><b>Other technology:</b> Extensive experience with Git; experience with Kubernetes, Cloudflare, Subversion, Mercurial, and CVS version control, Memcache, Redis</li>
+        </ul>
       </div>
 
       <div class="block">
-        <h3>Other</h3>
-        <div class="normal_list">
-          <ul>
-            <li>Created a small free-to-use blog website that operated for almost four years. Users were allowed to upload photos, write journal entries, etc. Source available upon request.</li>
-            <li>Created <a href="https://section411.com">Section 411</a>, a blog on the <a href="http://gohugo.io">Hugo</a> platform with a theme designed from scratch.</li>
-            <li>Published <a href="https://section411.com/2019/07/hello-world/">several</a> <a href="https://section411.com/2019/03/louvre-version-1.1/">technical</a> <a href="https://section411.com/2018/07/of-commits-and-containers/">posts</a></li>
-            <li>Created <a href="https://louvre.io">Louvre</a>, an image manager that can resize and serve images on the fly</li>
-          </ul>
-        </div>
+        <h3>Miscellaneous</h3>
+        <ul class="normal-list">
+          <li>Created a small free-to-use blog website that operated for almost four years. Users were allowed to upload photos, write journal entries, etc. Source available upon request.</li>
+          <li>Created <a href="https://section411.com">Section 411</a>, a blog on the <a href="http://gohugo.io">Hugo</a> platform with a theme designed from scratch.</li>
+          <li>Published <a href="https://section411.com/2019/07/hello-world/">several</a> <a href="https://section411.com/2019/03/louvre-version-1.1/">technical</a> <a href="https://section411.com/2018/07/of-commits-and-containers/">posts</a></li>
+          <li>Created <a href="https://louvre.io">Louvre</a>, an image manager that can resize and serve images on the fly</li>
+        </ul>
 
-        <div class="normal_list">
-          <ul>
-            <li>
-              <b>Stack Overflow:</b>
-              <a href="http://stackoverflow.com/users/350278/jimmy-sawczuk">Jimmy Sawczuk</a>
-            </li>
-            <li>
-              <b>GitHub</b>:
-              <a href="http://github.com/jimmysawczuk">github.com/jimmysawczuk</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="block">
-        <h3>References</h3>
-        <p>
-          Available upon request: <a href="mailto:me@jimmysawczuk.com">me@jimmysawczuk.com</a>
-        </p>
+        <ul class="normal-list">
+          <li>
+            <b>Stack Overflow:</b>
+            <a href="http://stackoverflow.com/users/350278/jimmy-sawczuk">Jimmy Sawczuk</a>
+          </li>
+          <li>
+            <b>GitHub</b>:
+            <a href="http://github.com/jimmysawczuk">github.com/jimmysawczuk</a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
