Prettier [skip ci]

--- a/less/main.less
+++ b/less/main.less
@@ -383,7 +383,10 @@ html {
   font-size: 0.85em;
 
   a {
-    &, &:active, &:visited, &:hover {
+    &,
+    &:active,
+    &:visited,
+    &:hover {
       color: #aaa;
       text-decoration: none;
     }
