--- a/less/resume.less
+++ b/less/resume.less
@@ -303,7 +303,9 @@ body {
       .education {
         margin: 1em 0;
 
-        .school, .city, .span {
+        .school,
+        .city,
+        .span {
           flex: 0 0 100%;
           text-align: left;
         }
@@ -320,7 +322,9 @@ body {
       .experience {
         margin: 1em 0;
 
-        .company, .city, .span {
+        .company,
+        .city,
+        .span {
           flex: 0 0 100%;
           text-align: left;
         }
@@ -333,7 +337,8 @@ body {
           font-size: 1em;
         }
 
-        .title, .title-date {
+        .title,
+        .title-date {
           flex: 0 0 100%;
           text-align: left;
         }
