--- a/less/resume.less
+++ b/less/resume.less
@@ -139,21 +139,21 @@ body {
         flex: 0 0 45%;
         font-weight: 700;
         font-size: 1.25em;
-        line-height: 1.25em;
+        line-height: 1.5;
       }
 
       .city {
         flex: 0 0 25%;
         text-align: center;
         font-size: 1.25em;
-        line-height: 1.25em;
+        line-height: 1.5;
       }
 
       .span {
         flex: 0 0 30%;
         text-align: right;
         font-size: 1.25em;
-        line-height: 1.25em;
+        line-height: 1.5;
       }
 
       .degree {
@@ -172,21 +172,21 @@ body {
         flex: 0 0 45%;
         font-weight: 700;
         font-size: 1.25em;
-        line-height: 1.25em;
+        line-height: 1.5;
       }
 
       .city {
         flex: 0 0 25%;
         text-align: center;
         font-size: 1.25em;
-        line-height: 1.25em;
+        line-height: 1.5;
       }
 
       .span {
         flex: 0 0 30%;
         text-align: right;
         font-size: 1.25em;
-        line-height: 1.25em;
+        line-height: 1.5;
       }
 
       .title {
@@ -336,10 +336,15 @@ body {
           font-size: 1em;
         }
 
+        .span.hide-mobile {
+          display: none;
+        }
+
         .title,
         .title-date {
           flex: 0 0 100%;
           text-align: left;
+          font-style: normal;
         }
 
         .title {
