--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -68,7 +68,7 @@
             Fort Mill, SC
           </div>
 
-          <div class="span">
+          <div class="span hide-mobile">
             Sept. 2017 – present
           </div>
 
@@ -110,7 +110,7 @@
             Columbia, SC
           </div>
 
-          <div class="span">
+          <div class="span hide-mobile">
             June 2009 – Sept. 2017
           </div>
 
