--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -222,7 +222,7 @@
       <div class="block">
         <h3>Skills</h3>
         <ul class="normal-list">
-          <li><b>Programming languages:</b> Extensive experience with Go, PHP (standard and MVC paradigms, Laravel framework), Javascript (ES6, Vue, jQuery, some React; some experience with C#, shell scripting</li>
+          <li><b>Programming languages:</b> Extensive experience with Go, PHP (standard and MVC paradigms, Laravel framework), Javascript (ES6, Vue, jQuery, some React); some experience with C#, shell scripting</li>
           <li><b>Infrastructure:</b> Extensive experience with Amazon AWS (EC2, ECS, S3, Lambda, some API Gateway, some Cloudfront, some Kinesis), Terraform</li>
           <li><b>Databases:</b> Extensive experience with MySQL and SQL Server development/optimization, Redis; some experience with MongoDB, DynamoDB, MySQL administration</li>
           <li><b>Other technology:</b> Extensive experience with Git; experience with Kubernetes, Cloudflare, Subversion, Mercurial, and CVS version control, Memcache, Redis</li>
