--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>James J. Sawczuk - Software Engineer</title>
+  <title>James J. Sawczuk – Software Engineer</title>
 
   <link href="{{ asset "/dist/resume.css" }}" rel="stylesheet" type="text/css" />
   <script src="{{ asset "/dist/resume.js" }}" defer></script>
   <link href="https://fonts.googleapis.com/css?family=Quicksand:500,700" rel="stylesheet">
 
   <meta name="keywords" content="jimmy, sawczuk, james, resume, php, go, golang, javascript, aws, terraform, html, css, mysql, developer, software, engineer, programmer" />
-  <meta name="description" content="The professional resume of James J. (Jimmy) Sawczuk, a software engineer who currently lives and works in Rock Hill, SC." />
+  <meta name="description" content="The professional résumé of James J. (Jimmy) Sawczuk, a software engineer who currently lives and works in Rock Hill, SC." />
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
