--- a/less/_resume_print.less
+++ b/less/_resume_print.less
@@ -3,12 +3,13 @@
 html {
   margin: 0px;
   padding: 0px;
-  font-size: 13px;
+  font-size: 12px;
 }
 
 body {
-  margin: 0px;
+  margin: 0px auto;
   width: 7.5in;
+  height: 10in;
   background-color: white;
   position: relative;
 }
@@ -16,23 +17,24 @@ body {
 #content {
   margin: 0px auto;
   background: #fff;
-  width: 900px;
+  width: 100%;
+  max-width: 100%;
 
   .container {
     padding: 0px;
     border-width: 0px;
     box-shadow: none;
     border-radius: 0px;
-    font-size: 108%;
     background: #fff;
 
     h1 {
       letter-spacing: normal;
-      font-size: 60px;
+      font-size: 4em;
     }
 
     h3 {
       letter-spacing: normal;
+      font-size: 2em;
     }
   }
 }
@@ -44,7 +46,8 @@ body {
 #print-footer {
   display: block;
   margin: 3em auto 0;
-  width: 900px;
+  width: 100%;
+  max-width: 100%;
   position: relative;
   text-align: center;
 
