--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -219,7 +219,7 @@
         </div>
       </div>
 
-      <div class="block">
+      <div class="same-page">
         <h3>Skills</h3>
         <ul class="normal-list">
           <li><b>Programming languages:</b> Extensive experience with Go, PHP (standard and MVC paradigms, Laravel framework), Javascript (ES6, Vue, jQuery, some React); some experience with C#, shell scripting</li>
@@ -229,7 +229,7 @@
         </ul>
       </div>
 
-      <div class="block">
+      <div class="same-page">
         <h3>Miscellaneous</h3>
         <ul class="normal-list">
           <li>Created a small free-to-use blog website that operated for almost four years. Users were allowed to upload photos, write journal entries, etc. Source available upon request.</li>
