--- a/less/resume.less
+++ b/less/resume.less
@@ -40,9 +40,8 @@ body {
   background-color: #f9f9f9;
 }
 
-.block {
+.same-page {
   page-break-inside: avoid;
-  // border: 1px solid black;
 }
 
 #content {
@@ -119,19 +118,8 @@ body {
       }
     }
 
-    .education,
-    .experience {
-      .block;
-      clear: both;
-      margin: 1em auto 1.5em;
-
-      div {
-        overflow: hidden;
-      }
-    }
-
     .education {
-      .clearfix;
+      margin: 1em auto 1.5em;
       display: flex;
       flex-wrap: wrap;
 
@@ -164,7 +152,7 @@ body {
     }
 
     .experience {
-      .clearfix;
+      margin: 1em auto 1.5em;
       display: flex;
       flex-wrap: wrap;
 
