--- a/less/main.less
+++ b/less/main.less
@@ -337,8 +337,10 @@ html {
     margin-right: 0.5em;
     font-size: 1.1em;
 
-    img {
+    img.section411-logo {
       background: fadeOut(#fff, 60%);
+      display: inline-block;
+      height: 25px;
     }
   }
 
