--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -45,7 +45,7 @@
               <i class="fad fa-paper-plane fa-fw"></i> E-mail
             </a>
             <a href="https://section411.com" class="link section411" target="_blank">
-              <div class="logo-img"><img src="/img/section411-logo.png" /></div> Section 411
+              <div class="logo-img"><img class="section411-logo" alt="Section 411" src="/img/section411-logo.png" /></div> Section 411
             </a>
             <a href="/resume" class="link resume">
               <i class="fad fa-id-card fa-fw"></i> Résumé
