--- a/less/main.less
+++ b/less/main.less
@@ -340,7 +340,8 @@ html {
     img.section411-logo {
       background: fadeOut(#fff, 60%);
       display: inline-block;
-      height: 25px;
+      height: 23px;
+      margin-top: -2px;
     }
   }
 
