--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -257,7 +257,9 @@
     <span class="line">&copy; {{ now | formatTime "2006" }} Jimmy Sawczuk</span>
     <span class="dot">&middot;</span>
     <span class="line revision">
-      <a href="https://github.com/jimmysawczuk/jimmysawczuk.com/commit/{{ index $rev "hex" "full" }}">rev. {{ index $rev "hex" "short" }}</a>
+      <a href="https://github.com/jimmysawczuk/jimmysawczuk.com/commit/{{ index $rev "hex" "full" }}">
+        {{- printf "rev. %s" (index $rev "hex" "short") -}}
+      </a>
     </span>
     <span class="dot">&middot;</span>
     <span class="line" id="revision-date">Last modified on {{ index $rev "date" | parseTime | formatTime "January 2, 2006" }}</span>
@@ -268,7 +270,9 @@
       &copy; {{ now | formatTime "2006" }} Jimmy Sawczuk
       &middot;
       <span class="revision">
-        <a href="https://github.com/jimmysawczuk/jimmysawczuk.com/commit/{{ index $rev "hex" "full" }}">rev. {{ index $rev "hex" "short" }}</a>
+        <a href="https://github.com/jimmysawczuk/jimmysawczuk.com/commit/{{ index $rev "hex" "full" }}">
+          {{- printf "rev. %s" (index $rev "hex" "short") -}}
+        </a>
       </span>
       &middot;
       Printed on <span id="print-date"></span>
