--- a/less/resume.less
+++ b/less/resume.less
@@ -1,8 +1,9 @@
-@import (inline) "../node_modules/normalize.css/normalize.css";
+@import (inline) "~normalize.css/normalize.css";
+@import "_type.less";
 
 @bodyFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans,
   Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-@titleFont: Quicksand, @bodyFont;
+@titleFont: "Quicksand", @bodyFont;
 @normalColor: #222;
 @headerColor: desaturate(#369, 20%);
 @linkColor: @headerColor;
