--- a/scss/resume.scss
+++ b/scss/resume.scss
@@ -1,18 +1,8 @@
-@import (inline) "~normalize.css/normalize.css";
-@import "_type.less";
+@use "~normalize.css/normalize";
+@use "type";
+@use "vars" as *;
 
-@bodyFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans,
-  Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-@titleFont: "Quicksand", @bodyFont;
-@normalColor: #222;
-@headerColor: desaturate(#369, 20%);
-@linkColor: @headerColor;
-
-.text-shadow (@color, @x, @y, @blur) {
-  text-shadow: @color @x @y @blur;
-}
-
-.clearfix() {
+@mixin clearfix() {
   &:after {
     display: block;
     content: "";
@@ -35,8 +25,8 @@ html {
 }
 
 body {
-  font-family: @bodyFont;
-  color: @normalColor;
+  font-family: $bodyFont;
+  color: $textColor;
   line-height: 1.5;
   background-color: #f9f9f9;
 }
@@ -50,7 +40,7 @@ body {
   margin: 0.5em auto;
 
   .container {
-    .clearfix;
+    @include clearfix();
 
     h2 {
       text-align: center;
@@ -59,17 +49,15 @@ body {
       font-size: 1em;
 
       a {
-        @color: @normalColor;
-        color: @color;
-        &:active {
-          color: @color;
+        &,
+        &:active,
+        &:visited,
+        &:hover {
+          color: $textColor;
         }
-        &:visited {
-          color: @color;
-        }
+
         &:hover {
           text-decoration: none;
-          color: @color;
         }
       }
 
@@ -83,9 +71,9 @@ body {
     }
 
     h1 {
-      font-family: @titleFont;
+      font-family: $titleFont;
       font-weight: 700;
-      color: @headerColor;
+      color: $headerColor;
       text-transform: uppercase;
       text-align: center;
       font-size: 4.5em;
@@ -94,9 +82,9 @@ body {
     }
 
     h3 {
-      font-family: @titleFont;
+      font-family: $titleFont;
       font-weight: 500;
-      color: @headerColor;
+      color: $headerColor;
       font-size: 2em;
       line-height: 1.5;
       text-transform: uppercase;
@@ -105,17 +93,15 @@ body {
     }
 
     a {
-      @color: @linkColor;
-      color: @color;
-      &:active {
-        color: @color;
+      &,
+      &:active,
+      &:visited,
+      &:hover {
+        color: $linkColor;
       }
-      &:visited {
-        color: @color;
-      }
+
       &:hover {
         text-decoration: none;
-        color: @color;
       }
     }
 
@@ -229,17 +215,15 @@ body {
   }
 
   a {
-    @color: #444;
-    color: @color;
-    &:active {
-      color: @color;
+    &,
+    &:active,
+    &:visited,
+    &:hover {
+      color: #444;
     }
-    &:visited {
-      color: @color;
-    }
+
     &:hover {
       text-decoration: none;
-      color: @color;
     }
   }
 }
@@ -357,5 +341,86 @@ body {
 }
 
 @media print {
-  @import "./_resume_print.less";
+  @page {
+    size: 8.5in 11in;
+    margin: 0.5in 0.5in 0.5in;
+  }
+
+  @page :first {
+    margin: 0.25in 0.5in 0.5in;
+  }
+
+  html {
+    margin: 0px;
+    padding: 0px;
+    font-size: 11.5px;
+  }
+
+  body {
+    margin: 0px auto;
+    width: 7.5in;
+    height: 10in;
+    background-color: white;
+    position: relative;
+  }
+
+  #content {
+    margin: 0px auto;
+    background: #fff;
+    width: 100%;
+    max-width: 100%;
+
+    .container {
+      padding: 0px;
+      border-width: 0px;
+      box-shadow: none;
+      border-radius: 0px;
+      background: #fff;
+
+      h1 {
+        letter-spacing: normal;
+        font-size: 4em;
+      }
+
+      h3 {
+        letter-spacing: normal;
+        font-size: 2em;
+      }
+    }
+  }
+
+  #footer {
+    display: none;
+  }
+
+  #print-footer {
+    @include clearfix();
+
+    display: block;
+    margin: 3em auto 0;
+    width: 100%;
+    max-width: 100%;
+    position: relative;
+    text-align: center;
+    page-break-before: avoid;
+
+    .container {
+      padding: 0px;
+      text-align: center;
+      color: #999;
+    }
+
+    a {
+      &,
+      &:active,
+      &:visited,
+      &:hover {
+        color: $linkColor;
+      }
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
 }
