--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -25,6 +25,11 @@
   <meta name="description" content="Jimmy Sawczuk is a software engineer who currently lives and works in Rock Hill, SC." />
 </head>
 <body>
+  {{- /*
+  <div id="dark-mode-switch">
+    <button onclick="document.body.classList.toggle('dark-mode')">Dark Mode</button>
+  </div>
+  */ -}}
   <div id="main-container">
     <div class="card">
       <div class="top">
