--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -11,8 +11,14 @@ $headerColor: desaturate(#369, 20%);
 $linkColor: $headerColor;
 
 @mixin dark-mode() {
-  @at-root body.dark-mode & {
-    @content;
+  @if "#{&}"=="body" {
+    &.dark-mode {
+      @content;
+    }
+  } @else {
+    @at-root body.dark-mode & {
+      @content;
+    }
   }
 
   @media (prefers-color-scheme: dark) {
