--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -18,6 +18,7 @@
     ga('create', 'UA-3634519-20', 'auto');
     ga('send', 'pageview');
   </script>
+  <script async defer data-domain="jimmysawczuk.com" src="https://plausible.io/js/plausible.js"></script>
 </head>
 <body>
   <div id="content">
