--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -13,6 +13,7 @@
   <link rel="manifest" href="/site.webmanifest">
   <meta name="msapplication-TileColor" content="#333333">
   <meta name="theme-color" content="#ffffff">
+  <script src="{{ asset "/dist/dark-mode.js" }}"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -25,12 +26,14 @@
   <meta name="description" content="Jimmy Sawczuk is a software engineer who currently lives and works in Rock Hill, SC." />
 </head>
 <body>
-  {{- /*
-  <div id="dark-mode-switch">
-    <button onclick="document.body.classList.toggle('dark-mode')">Dark Mode</button>
-  </div>
-  */ -}}
   <div id="main-container">
+    <div id="dark-mode-switch">
+      <button id="dark-mode-switch-btn">
+        <i class="fad fa-lightbulb-slash"></i>
+        <i class="fad fa-lightbulb-on"></i>
+      </button>
+    </div>
+
     <div class="card">
       <div class="top">
         <div class="img">
