--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -9,6 +9,7 @@
   <script src="{{ asset "/dist/resume.js" }}" defer></script>
   <meta name="keywords" content="jimmy, sawczuk, james, resume, php, go, golang, javascript, aws, terraform, html, css, mysql, developer, software, engineer, programmer" />
   <meta name="description" content="The professional résumé of James J. (Jimmy) Sawczuk, a software engineer who currently lives and works in Rock Hill, SC." />
+  <script src="{{ asset "/dist/dark-mode.js" }}"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -18,8 +19,15 @@
     ga('create', 'UA-3634519-20', 'auto');
     ga('send', 'pageview');
   </script>
+
 </head>
 <body>
+  <div id="dark-mode-switch">
+    <button id="dark-mode-switch-btn">
+      <i class="fad fa-lightbulb-slash"></i>
+      <i class="fad fa-lightbulb-on"></i>
+    </button>
+  </div>
   <div id="content">
     <div class="container">
       <h2>
