--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -29,8 +29,7 @@
   <div id="main-container">
     <div id="dark-mode-switch">
       <button id="dark-mode-switch-btn">
-        <i class="fad fa-lightbulb-slash"></i>
-        <i class="fad fa-lightbulb-on"></i>
+        <i class="fad fa-lightbulb-slash"></i>{{- printf "" -}}<i class="fad fa-lightbulb-on"></i>
       </button>
     </div>
 
