--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -13,7 +13,9 @@
   <link rel="manifest" href="/site.webmanifest">
   <meta name="msapplication-TileColor" content="#333333">
   <meta name="theme-color" content="#ffffff">
-  <script src="{{ asset "/dist/dark-mode.js" }}"></script>
+  <script>
+  {{- readFile  "public/dist/dark-mode.js" | safeJS -}}
+  </script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -29,7 +31,8 @@
   <div id="main-container">
     <div id="dark-mode-switch">
       <button id="dark-mode-switch-btn">
-        <i class="fad fa-lightbulb-slash"></i>{{- printf "" -}}<i class="fad fa-lightbulb-on"></i>
+        <i class="fad fa-lightbulb-slash"></i>
+        <i class="fad fa-lightbulb-on"></i>
       </button>
     </div>
 
