--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -14,7 +14,7 @@
   <meta name="msapplication-TileColor" content="#333333">
   <meta name="theme-color" content="#ffffff">
   <script>
-  {{- readFile  "public/dist/dark-mode.js" | safeJS -}}
+    {{- file  "public/dist/dark-mode.js" | safeJS -}}
   </script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
