--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -15,11 +15,7 @@ $cutoff: 750px;
 }
 
 @mixin dark-mode() {
-  @if "#{&}"=="html" {
-    &.dark-mode {
-      @content;
-    }
-  } @else if "#{&}"==":root" {
+   @if ("#{&}"=="html" or "#{&}"==":root") {
     @at-root html.dark-mode {
       @content;
     }
