--- a/scss/main.scss
+++ b/scss/main.scss
@@ -145,13 +145,17 @@ body {
 
   .img {
     flex: 0 1 40%;
-    padding: 2em 2em;
-    padding-right: 0;
+    padding: 2em 0 2em 2em;
     transition: filter $dark-mode-transition;
+
+    picture {
+      display: block;
+      height: 0;
+      padding-bottom: 100%;
+    }
 
     img {
       width: 100%;
-      border-radius: 300px;
     }
 
     @include dark-mode() {
