--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -30,7 +30,7 @@
 <body>
   <div id="main-container">
     <div id="dark-mode-switch">
-      <button id="dark-mode-switch-btn">
+      <button id="dark-mode-switch-btn" name="Dark Mode Switch">
         <i class="fad fa-lightbulb-slash"></i>
         <i class="fad fa-lightbulb-on"></i>
       </button>
@@ -53,7 +53,7 @@
             <a href="mailto:hello@jimmysawczuk.com" class="link email" target="_blank">
               <i class="fad fa-paper-plane fa-fw"></i> E-mail
             </a>
-            <a href="https://section411.com" class="link section411" target="_blank">
+            <a href="https://section411.com" class="link section411" target="_blank" rel="noopener">
               <div class="logo-img"><img class="section411-logo" alt="Section 411" src="/img/section411-logo.png" /></div> Section 411
             </a>
             <a href="/resume" class="link resume">
@@ -64,12 +64,12 @@
       </div>
       <div class="bottom">
         <div class="links">
-          <a href="https://facebook.com/jimmysawczuk" class="link fb" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a>
-          <a href="https://twitter.com/jimmysawczuk" class="link tw" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
-          <a href="https://t.me/jimmysawczuk" class="link tg" target="_blank"><i class="fab fa-telegram-plane"></i> Telegram</a>
-          <a href="https://instagram.com/jimmysawczuk" class="link instagram" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
-          <a href="https://linkedin.com/in/jimmysawczuk" class="link linkedin" target="_blank"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
-          <a href="https://github.com/jimmysawczuk" class="link github" target="_blank"><i class="fab fa-github"></i> Github</a>
+          <a href="https://facebook.com/jimmysawczuk" class="link fb" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i> Facebook</a>
+          <a href="https://twitter.com/jimmysawczuk" class="link tw" target="_blank" rel="noopener"><i class="fab fa-twitter"></i> Twitter</a>
+          <a href="https://t.me/jimmysawczuk" class="link tg" target="_blank" rel="noopener"><i class="fab fa-telegram-plane"></i> Telegram</a>
+          <a href="https://instagram.com/jimmysawczuk" class="link instagram" target="_blank" rel="noopener"><i class="fab fa-instagram"></i> Instagram</a>
+          <a href="https://linkedin.com/in/jimmysawczuk" class="link linkedin" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
+          <a href="https://github.com/jimmysawczuk" class="link github" target="_blank" rel="noopener"><i class="fab fa-github"></i> Github</a>
         </div>
       </div>
     </div>
